# jitterentropy-rs

./: Cargo.toml  README.md  VALIDATION.md
crates/jent-core/: Cargo.toml
crates/jent-core/src/: collector.rs  conditioner.rs  error.rs  health.rs  lib.rs  memory.rs  timer.rs
crates/jent-ffi/: Cargo.toml
crates/jent-ffi/src/: lib.rs
crates/jent-platform/: Cargo.toml
crates/jent-platform/src/: lib.rs  rdtsc.rs
docs/: PORTING_NOTES.md
examples/: basic.rs  read.rs
src/: collector.rs  conditioner.rs  error.rs  ffi.rs  flags.rs  health.rs  lib.rs  memory.rs  status.rs  timer.rs
tests/: api.rs  timer.rs
