[package]
name = "jent-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
jent-core = { path = "../jent-core", features = ["sha3-512", "shake256"] }
jent-platform = { path = "../jent-platform" }
